fixed some stuff